# cota

./: .gitignore  BUILD.md  CHANGES.md  COPYRIGHT.md  Cargo.toml  Cross.toml  Dockerfile  README.md  cross.md  icon.rs  win_icon.rs
res/: adventurer_skills.json  level_exp_values  level_exp_values.rs  producer_skills.json  skill_exp_values  win_icon.rc
src/: about_dlg.rs  app.rs  chronometer.rs  config.rs  confirm_dlg.rs  dps_dlg.rs  ethos.rs  experience.rs  farming.rs  game_data.rs  items_dlg.rs  log_data.rs  log_dlg.rs  main.rs  notes_dlg.rs  offline.rs  plant_dlg.rs  plant_info.rs  search_dlg.rs  skill_info.rs  stats.rs  storage.rs  towns_dlg.rs  util.rs
src/res/: adventurer_skills.csv  level_exp_values  producer_skills.csv  seeds.csv  skill_exp_values
