[package]
authors = ["Barugon"]
build = "win_icon.rs"
description = "Companion of the Avatar"
edition = "2021"
license = "GPL-3.0-or-later"
name = "cota"
version = "5.6.4"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
clipboard = "0.5"
dirs = "5.0"
eframe = "0.24"
egui_extras = {version = "0.24", features = ["datepicker", "image"]}
egui_file = "0.12"
futures = {version = "0.3", features = ["thread-pool"]}
image = {version = "0.24", features = ["png"]}
notify-rust = "4.8"
num-format = "0.4"
num_cpus = "1.16"
regex = "1.9"
ron = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sys-locale = "0.3"

[build-dependencies]
embed-resource = "2.4"

[profile.release]
strip = "symbols"
